--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -8,9 +8,9 @@ The study of acoustic signals forms the core of many fields including sonar, sei
 
 The Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Conversely, many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. For these signals, joint time-frequency analysis is required.
 
-One method of performing time-frequency analysis is to multiply the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram \parencite{melbook}. \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
+One method for performing time-frequency analysis is to multiply the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram \parencite{melbook}. \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
 
-Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing systems commonly split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
+Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing systems are commonly designed to split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of Western pop music used in mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
 
 The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and can trade them off by changing the duration and the type of the window \parencite{gabor1946, gabordiagrams}.
 
@@ -37,7 +37,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT \parencite{dictionary}.
 
-The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
+The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale that matched the notes of a musical pitch scale. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the CQT and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
 
 \begin{figure}[ht]
 	\centering
@@ -47,9 +47,7 @@ The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to a
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and a perfect inverse. The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT in realtime.
-
-The NSGT is computed by varying the size of the window on which the Fourier Transform is taken. The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the CQT as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform is taken. \textcite{slicq} introduced a realtime variant of the NSGT, called the \textit{sliced Constant-Q transform} (sliCQT). The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, with minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
@@ -64,9 +62,9 @@ STFT-based music demixing techniques may be limited by the fixed time-frequency 
 
 Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. By contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which might replace the need for multiple STFTs.
 
-Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}.
+Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT that can be used to implement a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}.
 
-The NSGT and sliCQT can be constructed with any frequency scale that is monotonically increasing, for example, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python.\footnote{\label{grnsgt}\url{https://github.com/grrrr/nsgt}}
+The NSGT and sliCQT can also use any frequency scale that is monotonically increasing, for example, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python.\footnote{\label{grnsgt}\url{https://github.com/grrrr/nsgt}}
 
 \subsection{Contribution and results}
 
