--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -512,7 +512,7 @@ This same statement also applies to the NSGT, where different frequency bins hav
 	\label{fig:raggedslicqt}
 \end{figure}
 
-Note that to produce a meaningful spectrogram like the NSGT in Figure \ref{fig:raggedslicqt}, the slices returned by the sliCQT must be overlap-added as described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. The NSGT outputs the meaningful spectrogram directly, without any further modifications needed.
+Note that to produce a spectrogram like the NSGT in Figure \ref{fig:raggedslicqt}, the slices returned by the sliCQT must be overlap-added as described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. The NSGT outputs the spectrogram directly, without any further modifications needed.
 
 \newpagefill
 
